--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,7 @@ body {
     padding: 0.5em 1em;
     cursor: pointer;
     align-self: center;
+    width: 300px;
 }
 
 img {
@@ -99,6 +100,7 @@ h3 {
 }
 
 .filter-repos {
+    width: 300px;
     margin-top: 1em;
     padding: 0.5em;
 }
@@ -175,11 +177,20 @@ h3 {
     border: 1px solid #ccc;
 }
 
+.user-info figure {
+    display: none;
+}
+
 .hide .extra-info {
     display: none;
 }
 
 @media (min-width: 800px) {
+
+    .user-info figure {
+        display: block;
+    }
+
     .discover {
         justify-content: space-between;
     }
@@ -189,9 +200,11 @@ h3 {
     }
 
     .repo-list {
-        width: 65%;
+        width: 70%;
     }
+}
 
+@media (min-width: 1050px) {
     .repo-list .repo {
         width: calc(50% - 2em);
     }
