--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,8 @@ ul {
 }
 
 .user-info figure {
-    width: 20%;
+    width: 90%;
+    max-width: 200px;
 }
 
 .user-info img {
@@ -82,9 +83,10 @@ ul {
 
 .user-info div {
     display: flex;
+    text-align: center;
     flex-wrap: wrap;
     align-items: center;
-    width: 45%;
+    width: 100%;
     padding-left: 5%;
 }
 
@@ -110,12 +112,13 @@ ul {
     width: 100%;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     align-items: flex-start;
 }
 
 .repo-list li {
-    width: 30%;
-    margin: 1em;
+    width: 90%;
+    margin: 1em 0;
     border: 1px solid #833f3f;
     padding: 0.5em;
 }
@@ -169,4 +172,26 @@ ul {
 
 .back {
     max-width: 200px;
+}
+
+@media (min-width: 700px) {
+
+    .user-info div {
+        width: 45%;
+        text-align: left;
+    }
+
+    .repo-list {
+        justify-content: space-between;
+    }
+
+    .repo-list li {
+        width: 48%;
+    }
+}
+
+@media (min-width: 1200px) {
+    .repo-list li {
+        width: 30%;
+    }
 }
